# tholkaappiyam

./: LICENSE  README.md  pyproject.toml
src/tholkaappiyam/: thol.py
src/tholkaappiyam.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
